--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -47,7 +47,7 @@
                   <a href='#' target='_blank'>
                     <img alt='Rss' src='/images/rss.png' />
                   </a>
-                  <a href='#' target='_blank'>
+                  <a href='https://www.facebook.com/' target='_blank'>
                     <img alt='Facebook' src='/images/facebook.png' />
                   </a>
                 </div> <!-- end #social-icons -->
